ported inline markup to express

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,8 @@
       
         <div id="pages">
 
-          <div id="report-page"></div>
+          <div id="report-page">
+          </div>
           
           <div id="map-page" class="current">
             
@@ -68,10 +69,10 @@
     <footer>
       <ul id="tab-bar">
         <li>
-          <a href="#report-page">Report</a>
+          <a href="#report-page" class="btn-inverse">Report</a>
         </li>
         <li>
-          <a href="#map-page">Map</a>
+          <a href="#map-page" class="btn-inverse active">Map</a>
         </li>
       </ul>
     </footer>
