Added routes for ratings data in index view

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -28,7 +28,7 @@
     <form name="submitRating" id="submitRating" method="POST" action="/">
     <legend>Submit a rating...</legend>
     <label>Badge Number</label>
-    <input type="text" placeholder="Type something…" value="badge">
+    <input type="text" placeholder="Type something…" value="badge" id="badge">
     <span class="help-block">Example block-level help text here.</span>
     <label>Rating</label>
     <select>
@@ -39,7 +39,7 @@
     <option>5</option>
     </select>
     <label>Comment</label>
-    <input type="text" placeholder="Type something…" value="comment">
+    <input type="text" placeholder="Type something…" value="">
     <span class="help-block">Example block-level help text here.</span>
 
     <label class="checkbox">
