--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,16 @@
         <div id="pages">
 
           <div id="reviews-page">
-            
+            <table class="table table-hover">
+            <thead>
+              <tr><td>Badge #</td><td>Rating</td><td>Comments</td></tr>
+            </thead>
+            <tbody>
+              <% for(var i=0; i<ratings.length; i++) {%>
+              <tr><td><%= ratings[i].badge %></td><td><%= ratings[i].rating %></td><td><%= ratings[i].comment %></td></tr>
+              <% } %>
+            </tbody>
+            </ul>
           </div>
         
           
