--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,6 +96,17 @@
         <div id="pages">
 
           <div id="reviews-page">
+
+            <table class="table table-hover">
+            <thead>
+              <tr><td>Badge #</td><td>Rating</td><td>Comments</td></tr>
+            </thead>
+            <tbody>
+              <% for(var i=0; i<ratings.length; i++) {%>
+              <tr><td><%= ratings[i].badge %></td><td><%= ratings[i].rating %></td><td><%= ratings[i].comment %></td></tr>
+              <% } %>
+            </tbody>
+            </table>
             
           </div> <!-- end #reviews-page -->
         
@@ -107,7 +118,6 @@
           </div> <!-- end #map-page -->
 
         </div>
-
       </div>
     </div>
 
