--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 
     <header>
         <span><img id="header-logo" src="images/logo.png" alt=""></span>
-        <span id="report-button" class="pull-right"><a href="#myModal" role="button" class="btn" data-toggle="modal" data-target="#myModal">Report</a></span>
+        <span id="report-button-wrap"><a href="#myModal" role="button" id="report-button" class="btn" data-toggle="modal" data-target="#myModal">Report</a></span>
     </header>
 
     <div id="wrapper">
@@ -73,18 +73,19 @@
             <option>5</option>
             </select>
             <label>Comment</label>
-            <input type="text" placeholder="Type something…" value="comment">
+            <input id="comment" type="text" placeholder="Type something…" value="comment">
             <span class="help-block">Example block-level help text here.</span>
         
             <label class="checkbox">
             <input type="checkbox"> Include location
             </label>
+          <button id="#submit-button" type="submit" class="btn btn-primary">Submit</button>
           </form>
         
         </div>
         
         <div class="modal-footer">
-          <button class="btn btn-primary">Submit</button>
+          <!-- <button id="#submit-button" type="submit" class="btn btn-primary close" data-dismiss="modal">Submit</button> -->
         </div>
       
       </div> <!-- end .modal -->
@@ -97,15 +98,15 @@
 
           <div id="reviews-page">
 
-            <table class="table table-hover">
-            <thead>
-              <tr><td>Badge #</td><td>Rating</td><td>Comments</td></tr>
-            </thead>
-            <tbody>
-              <% for(var i=0; i<ratings.length; i++) {%>
-              <tr><td><%= ratings[i].badge %></td><td><%= ratings[i].rating %></td><td><%= ratings[i].comment %></td></tr>
-              <% } %>
-            </tbody>
+            <table id="" class="table table-hover">
+              <thead>
+                <tr><td>Badge #</td><td>Rating</td><td>Comments</td></tr>
+              </thead>
+              <tbody>
+                <% for(var i=0; i<ratings.length; i++) {%>
+                <tr><td><%= ratings[i].badge %></td><td><%= ratings[i].rating %></td><td><%= ratings[i].comment %></td></tr>
+                <% } %>
+              </tbody>
             </table>
             
           </div> <!-- end #reviews-page -->
