--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,13 +59,13 @@
         
         <div class="modal-body">
             
-          <form name="submitRating" id="submitRating" method="POST" action="/">
+          <form name="submitRating" id="submitRating" method="POST" action="/form">
             <legend>Submit a rating...</legend>
             <label>Badge Number</label>
-            <input type="text" placeholder="Type something…" value="badge">
+            <input type="text" placeholder="Type something…" value="badge" id="badge" name="badge">
             <span class="help-block">Example block-level help text here.</span>
             <label>Rating</label>
-            <select>
+            <select id="rating" name="rating">
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -73,7 +73,7 @@
             <option>5</option>
             </select>
             <label>Comment</label>
-            <input id="comment" type="text" placeholder="Type something…" value="comment">
+            <input id="comment" type="text" placeholder="Type something…" value="comment" id="comment" name="comment">
             <span class="help-block">Example block-level help text here.</span>
         
             <label class="checkbox">
