--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,13 +79,12 @@
             <label class="checkbox">
             <input type="checkbox"> Include location
             </label>
-          <button id="#submit-button" type="submit" class="btn btn-primary">Submit</button>
           </form>
         
         </div>
         
         <div class="modal-footer">
-          <!-- <button id="#submit-button" type="submit" class="btn btn-primary close" data-dismiss="modal">Submit</button> -->
+          <button id='submit-button' class="btn btn-primary" data-dismiss="modal" onclick="$('#submitRating').submit();">Submit</button>
         </div>
       
       </div> <!-- end .modal -->
