fixing form post (parts of it anyway..)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
         </div>
         
         <div class="modal-footer">
-          <button id='submit-button' class="btn btn-primary" data-dismiss="modal" onclick="$('#submitRating').submit();">Submit</button>
+          <button id='submit-button' class="btn btn-primary" data-dismiss="modal" onclick="window.submit_topcop_review();">Submit</button>
         </div>
       
       </div> <!-- end .modal -->
