--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,7 @@
     <header>
         <span><img id="header-logo" src="images/logo.png" alt=""></span>
         <span id="report-button-wrap"><a href="#myModal" role="button" id="report-button" class="btn" data-toggle="modal" data-target="#myModal">Report</a></span>
+
     </header>
 
     <div id="wrapper">
@@ -94,8 +95,11 @@
 
 
           <div id="reviews-page">
-
-
+            
+            <div id="text-logo-wrap">
+              <h1 id="text-logo">TOP COP</h1>
+            </div>
+            
             <div id="list-wrap">
             <div class="h-divider"></div>
 
