--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,11 @@
     <link href="stylesheets/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="stylesheets/leaflet.css" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" />
+    <![endif]-->
 
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -62,7 +67,7 @@
             
           <form name="submitRating" id="submitRating" method="POST" action="/form">
             <label>Badge Number</label>
-            <input type="text" placeholder="Type something…" value="badge" id="badge" name="badge">
+            <input type="text" id="badge" name="badge">
             <label>Rating</label>
             <select id="rating" name="rating">
             <option>1</option>
@@ -72,10 +77,7 @@
             <option>5</option>
             </select>
             <label>Comment</label>
-            <input id="comment" type="text" placeholder="Type something…" value="comment" id="comment" name="comment">
-        
-            <label class="checkbox">
-            <input id='location' name='location' type="checkbox"> Include location
+            <input id="comment" type="text" id="comment" name="comment">
             </label>
           </form>
         
@@ -140,8 +142,8 @@
     </footer>
 
     <script src="javascripts/jquery-1.7.1.min.js"></script>
-    <script src="javascripts/bootstrap.min.js"></script>
-    <script src="javascripts/leaflet.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>  
+    <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.0"></script>
     <script src="javascripts/map.js"></script>
     <script src="javascripts/scripts.js"></script>
